chore: rename upload directory [skip ci]
Signed-off-by: rishyak <hello@rishyak.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: upload
         uses: actions/upload-artifact@v3
         with:
-          name: upload firmware
+          name: firmware
           path: |
             CMakeDemoBlinky.elf
             CMakeDemoBlinky.bin
