chore: rename executable
- lower cxx version requirement because windows cross compiler sucks

Signed-off-by: rishyak <hello@rishyak.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,7 +39,7 @@ jobs:
         with:
           name: firmware
           path: |
-            CMakeDemoBlinky.elf
-            CMakeDemoBlinky.bin
-            CMakeDemoBlinky.hex
+            blinky.elf
+            blinky.bin
+            blinky.hex
           if-no-files-found: warn
