--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,27 +7,27 @@ set(APP_TARGET CMakeDemoBlinky)
 include(${MBED_PATH}/tools/cmake/app.cmake)
 
 # the project
-project(${APP_TARGET} VERSION 1.0.0 LANGUAGES CXX)
+project(CMakeDemoBlinky VERSION 1.0.0 LANGUAGES CXX)
 
 # the os
 add_subdirectory(${MBED_PATH})
 
 # the app
-add_executable(${APP_TARGET})
+add_executable(blinky)
 
 # compiler options
-target_compile_options(${APP_TARGET} PRIVATE -Wall -Wextra -pedantic -Wreorder 
+target_compile_options(blinky PRIVATE -Wall -Wextra -pedantic -Wreorder 
 -Wshadow -Wconversion -Wpointer-arith -Wswitch-enum -Wunreachable-code)
-target_compile_features(${APP_TARGET} PRIVATE cxx_std_23)
+target_compile_features(blinky PRIVATE cxx_std_17)
 
 # the include directory
-target_include_directories(${APP_TARGET} PRIVATE include)
+target_include_directories(blinky PRIVATE include)
 
 # source files
 add_subdirectory(src)
 
-target_link_libraries(${APP_TARGET} PRIVATE mbed-os)
+target_link_libraries(blinky PRIVATE mbed-os)
 
 # some important mbed thing, they don't explain it
 # or I haven't looked hard enough
-mbed_set_post_build(${APP_TARGET})
+mbed_set_post_build(blinky)
